<resources>
    <string name="app_name">OwnRoadRider</string>
    <string name="return_to_main">return_to_main</string>
    <string name="category">category</string>
    <string name="map">map</string>
    <string name="detail_search">detail search</string>
    <string name="my_page">my page</string>
    <string name="slogan">당신의 지도를 펴세요!</string>
    <string name="logo">logo</string>
    <string name="button_for_path_search">button for pathSearch</string>
    <string name="destination">도착지</string>
    <string name="startPoint">출발지</string>
    <string name="theme1">theme1</string>
    <string name="theme2">theme2</string>
    <string name="theme3">theme3</string>
    <string name="theme4">theme4</string>
    <string name="photograph">photograph</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="landscape1">landscape1</string>
    <string name="landscape2">landscape2</string>
    <string name="laanscape3">laanscape3</string>
    <string name="advancedSearchText">목적지 검색</string>
    <string name="my_own_road_ride">MY 온로라</string>
    <string name="user_name">여행가</string>
    <string name="sir">님</string>
    <string name="mange_my_review">나의 리뷰 관리</string>
    <string name="checked_destination">내가 본 여행지</string>
    <string name="list_destination_interest">관심 여행지 목록</string>
    <string name="recommended_schedule">여행 고수들의 추천 일정!</string>
    <string-array name="my_array">
        <item>딸기</item>
        <item>사과</item>
        <item>복숭아</item>
        <item>포도</item>
        <item>바나나</item>
        <item>키위</item>
        <item>수박</item>
        <item>메론</item>
        <item>배</item>
    </string-array>

</resources>