<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="375dp"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/return_to_main"
                app:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/categoryButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/category"
                app:srcCompat="@drawable/category" />

            <ImageButton
                android:id="@+id/mapButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/map"
                app:srcCompat="@drawable/location" />

            <ImageButton
                android:id="@+id/detailSearchButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/detail_search"
                app:srcCompat="@drawable/search" />

            <ImageButton
                android:id="@+id/mypageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/my_page" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>